[package]
name = "local_vec"
version = "0.2.1"
edition = "2018"
authors = ["Jorge Rinaldi <jrg.rinaldi@gmail.com>"]
license = "MIT"
repository = "https://github.com/m-rinaldi/local_vec"
description = "fixed-capacity vector allocated on the stack"
keywords = ["local", "vec", "vector", "stack", "small", "buffer", "optimization"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
